--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "productName": "app",
+  "productName": "Mob Timer",
   "version": "0.0.0",
   "description": "",
   "license": "MIT",
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "xo",
     "start": "electron .",
-    "build": "electron-packager . --out=dist --asar --overwrite --darwin"
+    "build": "electron-packager . --out=dist --asar --overwrite --darwin --icon icon.icns"
   },
   "main": "index.js",
   "files": [
